--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   background-color: #3A3620 !important;
   font-family: 'Nanum Gothic', sans-serif;
-}
+} */
 
 .card {
   background-color: #D8CC9E !important;
