--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,12 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
+nav {
+  background-color: #D8D3C0;
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
   padding: 8px;
   text-align: center;
@@ -10,10 +16,144 @@ h1 {
   text-shadow: 2px 2px #000;
 }
 
+.nextBtn {
+  margin-left: auto !important;
+  margin-right: auto !important;
+  display: block !important;
+  width: 20%;
+  height: 50px;
+  margin-top: 16px;
+  font-size: 24px !important;
+}
+
+
 .season {
-  height: 100;
-  max-width:
-  100%;
+  height: auto;
+  max-width: 100%;
+}
+
+.game1Img {
+  height: 1140px;
+  width: 100%;
+  background-image: url("./assets/images/game1.jpg");
+  background-size: cover;
+}
+
+.game2Img {
+  height: 1140px;
+  width: 100%;
+  background-image: url("./assets/images/game2.jpg");
+  background-size: cover;
+}
+
+.game3Img {
+  height: 1140px;
+  width: 100%;
+  background-image: url("./assets/images/game3.jpg");
+  background-size: cover;
+}
+
+div .game2, div .game3 {
+  display: none;
+}
+.poisonButton {
+  color: white;
+  border-radius: 50%;
+  background-color: red;
+  opacity: 0;
+  position: absolute;
+
+}
+
+.poisonButton:hover {
+  text-decoration: none;
+  cursor: default !important;
+}
+
+.poisonButtonShow {
+  opacity: 0.5;
+  -webkit-transition: opacity 1s ease-in;
+   -moz-transition: opacity 1s ease-in;
+   -o-transition: opacity 1s ease-in;
+   -ms-transition: opacity 1s ease-in;
+   transition: opacity 1s ease-in;
+}
+
+.game1plant1 {
+  height: 150px;
+  width: 150px;
+  margin-top: 950px;
+  margin-left: 375px;
+}
+
+.game1plant2 {
+  height: 200px;
+  width: 200px;
+  margin-top: 670px;
+  margin-left: 0;
+}
+
+.game1plant3 {
+  height: 150px;
+  width: 150px;
+  margin-top: 680px;
+  margin-left: 965px;
+}
+
+.game1plant4 {
+  height: 150px;
+  width: 150px;
+  margin-top: 350px;
+  margin-left: 440px;
+}
+
+.game2plant1 {
+  height: 200px;
+  width: 200px;
+  margin-top: 150px;
+  margin-left: 170px;
+}
+
+.game2plant2 {
+  height: 400px;
+  width: 400px;
+  margin-top: 400px;
+  margin-left: 370px;
+}
+
+.game2plant3 {
+  height: 150px;
+  width: 150px;
+  margin-top: 400px;
+  margin-left: 970px;
+}
+
+.game3plant1 {
+  height: 200px;
+  width: 200px;
+  margin-top: 700px;
+  margin-left: 500px;
+}
+
+.game3plant2 {
+  height: 300px;
+  width: 300px;
+  margin-top: 645px;
+  margin-left: 165px;
+}
+
+.game3plant3 {
+  height: 320px;
+  width: 320px;
+  margin-top: 800px;
+  margin-left: 800px;
+}
+
+.game3plant4 {
+  height: 200px;
+  width: 200px;
+  margin-top: 200px;
+  margin-left:30px;
 }
 
 .card {
@@ -61,11 +201,6 @@ h1 {
   height: 300px;
 }
 
-nav {
-  background-color: #D8D3C0;
-  margin: 0;
-  padding: 0;
-}
 
 .navbar {
   width: 100%;
@@ -84,7 +219,7 @@ nav {
   text-align: center;
   padding: 20px 24px;
   text-decoration: none;
-  width: 25%;
+  width: 20%;
 }
 
 .navbar a:hover {
@@ -108,6 +243,11 @@ nav {
   margin-right: 16px;
 }
 
+
+.season-body {
+  padding: 6px;
+}
+
 @media screen and (max-width: 500px) {
   .navbar a {
     float: none;
@@ -115,8 +255,4 @@ nav {
     width: 100%;
     text-align: left; /* If you want the text to be left-aligned on small screens */
   }
-}
-
-.season-body {
-  padding: 6px;
 }
