--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -265,6 +265,11 @@ div .game2, div .game3 {
   margin-right: 16px;
 }
 
+#pin {
+  width: 45px;
+  height: 60px;
+}
+
 #showImg {
   border-radius: 10%;
   height: 250px;
