--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,6 +30,15 @@ section {
   background-color: #D8CC9E;
 }
 
+#map {
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.game1Img, .game2Img, .game3Img, #map {
+  border-radius: 2%;
+}
+
 .footer {
   width: 100%;
   height: 150px;
